--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <title>Oleg Senkiv!</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <img src="grumpy.jpg" alt="Grumpy Cat">
+    <h1>Oleg Senkiv</h1>
+    <img src="happy.jpg" alt="Happy Dog">
   </body>
  </html>
     
