--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Oleg Senkiv!</title>
+    <title>olegsenkiv1992!</title>
   </head>
   <body>
-    <h1>Oleg Senkiv</h1>
+    <h1>olegsenkiv1992</h1>
     <img src="happy.jpg" alt="Happy Dog">
   </body>
  </html>
